<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameOptionsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chooseGameText"
            style="@style/OptionsText"
            android:layout_width="180dp"
            android:text="@string/choose_game" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Spinner"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/nameGameText"
                style="@style/OptionsText"
                android:text="@string/name_of_game" />

            <EditText
                android:id="@+id/nameOfGameET"
                style="@style/OptionsText"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:hint="@string/name"></EditText>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/numberDicesText"
                style="@style/OptionsText"
                android:text="@string/number_of_dices_text" />


            <TextView
                android:id="@+id/numberDicesTV"
                style="@style/OptionsText"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/numberOfDices" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/plusButton"
                style="@style/PlusMinusButton"
                android:layout_column="1"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minusButton"
                style="@style/PlusMinusButton"
                android:layout_column="2"
                android:text="@string/minus" />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/addGameButton"
        style="@style/MenuButton"
        android:layout_marginBottom="30dp"
        android:text="@string/addGame" />

    <Button
        android:id="@+id/startButton"
        style="@style/MenuButton"
        android:text="@string/start" />


</LinearLayout>