<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/resultsAll">


    <LinearLayout
        android:id="@+id/TypeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:text="@string/type_of_dices"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/gameTypeSpinner"
            style="@style/Spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadResultsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/TypeLinearLayout">

        <TextView
            android:id="@+id/gameNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/game"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/gameNameSpinner"
            style="@style/Spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/gameIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/number"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/gameIDSpinner"
            style="@style/Spinner"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginTop="8dp"
        android:divider="@color/colorText"
        android:dividerHeight="1dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadResultsLinearLayout" />


</android.support.constraint.ConstraintLayout>